feat/djconnect-big-update
